<resources>
    <string name="app_name">App RPG Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_commented_post">%1$s commented your %2$s post</string>
    <string name="notification_new_post">%1$s made a new post</string>
    <string name="snackbar_update_profile_images">Image changed successfully</string>
    <string name="snackbar_update_profile_images_btn">Save</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">Our warriors weren\'t enough…</string>
    <string name="customactivityoncrash_error_activity_restart_app">Try Again</string>
    <string name="customactivityoncrash_error_activity_close_app">Give Up</string>
    <string name="customactivityoncrash_error_activity_error_details">Enemy details</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Enemy details</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Get report</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Report copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Enemy information</string>
    <string name="date_post_pattern">HH:mm\nMM/dd/yyy</string>
    <string name="description_test" translatable="false">
        Innate: Kai Sa s basic attacks deal 4 − 10 (based on level) (+ 1 − 5 (based on level) per Plasma stack)
        (+ 10% − 20% (based on Plasma stacks) AP) Magic damage bonus magic damage.Kai Sa Plasma
        \n\n
        Caustic Wounds: Kai Sa s basic attacks, Void Seeker Void Seeker, and nearby allies  Stun icon immobilizing effects mark enemies with Plasma for 4 seconds, stacking up to 4 times.
        Kai Sa s attacks or Void Seeker Void Seeker can then rupture enemies with 4 Plasma,
        consuming them to deal 15% (+ 2.5% per 100 AP) of the target s missing health magic damage, capped at 400 against monsters.
        \n\n
        Living Weapon: When reaching a certain amount of stat from items and stat growth, Kai Sa can evolve the related basic ability.
        This has a channel time of 2 seconds, and the upgrade is lost if the stat requirement is no longer met.</string>
    <string name="base_key_pref" translatable="false">base_key</string>
    <string name="character_names_key_pref" translatable="false">character_names_key_pref</string>
    <string name="login_key_pref" translatable="false">login_pref</string>
    <string name="order_by_favorites_item_key" translatable="false">order_by_favorites_items</string>
    <string name="order_by_favorites_maho_key" translatable="false">order_by_favorites_maho</string>
    <string name="order_by_favorites_notes_key" translatable="false">order_by_favorites_notes</string>
    <string name="order_by_favorites_skills_key" translatable="false">order_by_favorites_skills</string>
    <string name="order_by_favorites_weapons_key" translatable="false">order_by_favorites_weapons</string>
    <string name="user_object" translatable="false">user_object</string>
    <string name="character_object" translatable="false">character_object</string>
    <string name="host_character_id" translatable="false">host_character_id</string>
    <string name="host_character_object" translatable="false">host_character_object</string>
    <string name="fragment_object" translatable="false">fragment_object</string>
    <string name="default_fragment" translatable="false">default_fragment</string>
    <string name="post_object" translatable="false">post_object</string>
    <string name="weapon_object" translatable="false">weapon_object</string>
    <string name="item_object" translatable="false">item_object</string>
    <string name="maho_object" translatable="false">maho_object</string>
    <string name="note_object" translatable="false">note_object</string>
    <string name="skill_object" translatable="false">skill_object</string>
    <string name="image_key" translatable="false">image_key</string>
    <string name="nickname">Nickname</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_new_acc">Create New Account</string>
    <string name="register_forgot_pass">I don\'t remember my password</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="character_name">Name</string>
    <string name="character_breed">Breed</string>
    <string name="character_classe">Class</string>
    <string name="dice_roll">Dice Roll</string>
    <string name="roll_history">Roll History</string>
    <string name="modifier">Modifier</string>
    <string name="roll_details_modifier">"  + (%1$d Modifier)"</string>
    <string name="empty_field_error">Please, fill all the fields</string>
    <string name="unexistent_user_error">There\'s no Account with this email</string>
    <string name="wrong_email_or_password_error">Invalid email or Password</string>
    <string name="duplicated_email_error">There\'s already an account using this email</string>
    <string name="confirm_password_error">Passwords doesn\'t matches</string>
    <string name="non_confirmed_email_error">Email has not been confirmed yet</string>
    <string name="toast_permission_error">You must allow the permissions to continue…</string>
    <string name="toast_add_image_error">Fail to add image\n</string>
    <string name="toast_cant_post">Unfortunately you can\'t post yet\nRequest that permission to your master</string>
    <string name="toast_post_limit">Post limit has been reached</string>
    <string name="toast_cant_comment">Unfortunately you can\'t comment yet\nRequest that permission to your master</string>
    <string name="toast_add_image_empty_error">Select an Image</string>
    <string name="toast_no_image_error">Please, select an image before continue</string>
    <string name="toast_trash_error">[...]</string>
    <string name="toast_select_image_error">Failed to select image</string>
    <string name="toast_load_image_error">Failed to load image</string>
    <string name="toast_update_image_successful">The Image was successfully updated</string>
    <string name="toast_recover_email_send_successful">Password Reset Email send successfully</string>
    <string name="toast_on_login_error">Loading data error\nPlease try again</string>
    <string name="toast_invalid_email">Invalid email</string>
    <string name="toast_kill_damage">Hahaha…\nIt was not a REAL Damage\nYou just testing the App… \nIsn\'t IT? &#128056;</string>
    <string name="frog" translatable="false">&#128056; ...</string>
    <string name="toast_offline_title">Out of Energy…</string>
    <string name="toast_offline_msg">As well Spells needs Mana, we need Internet to work\nBe aware if you ignore this, errors and data loss can happen</string>
    <string name="toast_offline_positive">Try again</string>
    <string name="toast_exit_title">Closing App</string>
    <string name="toast_exit_msg">Do you want to leave?</string>
    <string name="toast_exit_positive">Yes, I\'m going</string>
    <string name="toast_exit_negative">No, I\'ll stay</string>
    <string name="collision_character_name_error">I\'m sorry\nDoppelgangers aren\'t accepted here…</string>
    <string name="user_registered_successful">User registered successfully</string>
    <string name="character_created_successful">Welcome, </string>
    <string name="character_edited_successful">Sometimes, changes are necessary for rise</string>
    <string name="weapon_created_successful">Weapon created successfully</string>
    <string name="weapon_deleted_successful">Weapon deleted successfully</string>
    <string name="weapon_edited_successful">I hope it was a buff</string>
    <string name="post_created_successful">Post published successfully</string>
    <string name="post_edited_successful">Post edited successfully</string>
    <string name="item_created_successful">Item created successfully</string>
    <string name="item_deleted_successful">Item deleted successfully</string>
    <string name="item_edited_successful">I hope it was a buff…</string>
    <string name="skill_created_successful">Skill created successfully</string>
    <string name="skill_deleted_successful">Skill deleted successfully</string>
    <string name="skill_edited_successful">I hope it was a buff…</string>
    <string name="maho_created_successful">Mahō created successfully</string>
    <string name="maho_deleted_successful">Mahō deleted successfully</string>
    <string name="maho_edited_successful">I hope it was a buff…</string>
    <string name="note_created_successful">Note created successfully</string>
    <string name="note_deleted_successful">Note deleted successfully</string>
    <string name="note_edited_successful">Note edited successfully</string>
    <string name="xp_updated_successful">Current XP updated successfully</string>
    <string name="hint_weapon_name">Weapon Name</string>
    <string name="hint_weapon_description">Tell how Amazing this Weapon is</string>
    <string name="hind_weapon_damage">How much Damage this little beauty does?</string>
    <string name="hint_weapon_amount">How much of this do you have?</string>
    <string name="weapons">Weapons</string>
    <string name="inventory">Inventory</string>
    <string name="m_items">Items</string>
    <string name="maho" translatable="false">Mahō</string>
    <string name="skill" translatable="false">Skill</string>
    <string name="attributes">Attributes</string>
    <string name="xp" translatable="false">XP</string>
    <string name="tavern">Tavern</string>
    <string name="notes">Notes</string>
    <string name="powers">Specials</string>
    <string name="account">Account</string>
    <string name="my_characters">My Characters</string>
    <string name="exit">Exit</string>
    <string name="dialog_hp_title">Heal or Damage</string>
    <string name="dialog_hp_heal">Heal</string>
    <string name="dialog_hp_damage">Damage</string>
    <string name="dialog_add_xp_title">Insert Experience Points</string>
    <string name="dialog_add_btn_add">Add</string>
    <string name="dialog_add_btn_subtract">Subtract</string>
    <string name="alert_add_attr_btn_cancel">Cancel</string>
    <string name="alert_add_attr_btn_confirm">Add</string>
    <string name="alert_add_attr_hint_value">Value</string>
    <string name="alert_update_attr_btn_cancel">Cancel</string>
    <string name="alert_update_attr_btn_confirm">Update</string>
    <string name="alert_update_attr_hint_value" translatable="false"> %1$d</string>
    <string name="alert_update_attr_hint_name" translatable="false"> %1$s</string>
    <string name="dialog_update_attr_title">Update Attribute</string>
    <string name="dialog_edit_char_title">Edit %1$s</string>
    <string name="dialog_edit_char_hint_name">Name: %1$s</string>
    <string name="dialog_edit_char_hint_breed">Breed: %1$s</string>
    <string name="dialog_edit_char_hint_classe">Class: %1$s</string>
    <string name="dialog_hint_damage_title">Damage Calculator</string>
    <string name="dialog_hint_damage">Damage</string>
    <string name="dialog_hint_armor">Armor</string>
    <string name="dialog_hint_mr">Magic Resist</string>
    <string name="dialog_hint_const">Constitution</string>
    <string name="dialog_hint_modfier">Modifier</string>
    <string name="dialog_checkbox_modfier">Modifier is Percentage</string>
    <string name="dialog_btn_physical">Physical</string>
    <string name="dialog_btn_magic">Magic</string>
    <string name="dialog_btn_hybrid">Hybrid</string>
</resources>