<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="16dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/update_attr_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/dialog_update_attr_title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <ImageButton
                android:id="@+id/update_attr_dialog_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/curved_shape"
                android:backgroundTint="#F44336"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_delete" />
        </LinearLayout>

        <EditText
            android:id="@+id/update_attr_dialog_name"
            style="@style/BaseDialogEditTExt"
            android:backgroundTint="#E9F3F3F3"
            android:ems="10"
            android:hint="@string/alert_update_attr_hint_name"
            android:inputType="textPersonName"
            android:maxEms="@integer/max_ems_attr_name"
            />

        <EditText
            android:id="@+id/update_attr_dialog_value"
            style="@style/BaseDialogEditTExt"
            android:backgroundTint="#E9F3F3F3"
            android:ems="10"
            android:hint="@string/alert_update_attr_hint_value"
            android:inputType="number"
            android:maxLength="@integer/max_length_attribute_value"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/update_attr_dialog_negative"
                style="@style/BaseDialogButton"
                android:backgroundTint="#BEFF0048"
                android:text="@string/alert_update_attr_btn_cancel"
                 />

            <Button
                android:id="@+id/update_attr_dialog_positive"
                style="@style/BaseDialogButton"
                android:backgroundTint="#09C2DA"
                android:text="@string/alert_update_attr_btn_confirm"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>