<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apprpg.ui.activities.AddWeaponActivity"
    android:fitsSystemWindows="true"
    android:theme="@style/AppThemeTranslucentStatusBar">

    <ImageView
        android:id="@+id/bg_fade_add_weapon"
        android:src="@android:color/black"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_default" />


    <LinearLayout
        android:alpha="0.95"
        android:id="@+id/linear_layout_add_weapon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="300dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:paddingBottom="40dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input_weapon_name"
                    style="@style/BaseCreateEditTextTheme"
                    android:hint="@string/hint_weapon_name"
                    />

                <EditText
                    android:id="@+id/input_weapon_desc"
                    android:hint="@string/hint_weapon_description"
                    style="@style/ItemDescriptionEditText"/>

                <EditText
                    android:id="@+id/input_weapon_damage"
                    style="@style/BaseCreateEditTextTheme"
                    android:hint="@string/hind_weapon_damage"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:maxLines="@integer/max_lines_weapon_damage"
                    />

                <EditText
                    android:id="@+id/input_weapon_amount"
                    style="@style/BaseCreateEditTextTheme"
                    android:hint="@string/hint_weapon_amount"
                    android:inputType="number"
                    android:maxLength="3"
                    />

                <ProgressBar
                    android:id="@+id/progress_bar_add_weapon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="24dp"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/btn_add_weapon"
                    style="@style/BaseCreateButton" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>